# AutoConnnect

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vite.config.js
business-connect/: main.rs
src/: App.css  App.jsx  logs.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: config - cliente.cfg  config - copia (2).cfg  config - copia.cfg  config - copia.db  config - monopuesto.cfg  config - monopuesto.db  config-theme.cfg  config.cfg  config.db  config.db.enctemp
src-tauri/icons/: icon.icns
src-tauri/nsis/: setup.nsh
src-tauri/src/: main.rs
src/utils/: agent.js
