[package]
name = "businessconnect"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "businessconnect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.8.2", features = ["system-tray", "custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10.3"
base64 = "0.21.5"
bson = "2.9.0"
config = "0.13.3"
futures-util = "0.3.30"
mongodb = "2.8.0"
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
mime_guess = "2.0"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono   = "0.4"
image      = "0.24"
imageproc  = "0.23"
tower-http = { version = "0.3", features = ["cors"] }
tokio-tungstenite = "0.21"
url = "2.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"



[features]
custom-protocol = []







